--- a/tcl/cygwin/configure.in
+++ b/tcl/cygwin/configure.in
@@ -14,33 +14,25 @@ AC_EXEEXT
 # link an executable.  This should really be fixed in autoconf
 # itself.
 
-AC_DEFUN(LIB_AC_PROG_CC,
+AC_DEFUN([LIB_AC_PROG_CC],
 [AC_BEFORE([$0], [AC_PROG_CPP])dnl
-AC_CHECK_PROG(CC, gcc, gcc)
-if test -z "$CC"; then
-  AC_CHECK_PROG(CC, cc, cc, , , /usr/ucb/cc)
+AC_CHECK_TOOL(CC, gcc, gcc)
+: ${CC:=gcc}
+AC_PROG_CC
+test -z "$CC" && AC_MSG_ERROR([no acceptable cc found in \$PATH])
+])
+
+AC_DEFUN([LIB_AC_PROG_CXX],
+[AC_BEFORE([$0], [AC_PROG_CPP])dnl
+AC_CHECK_TOOL(CXX, g++, g++)
+if test -z "$CXX"; then
+  AC_CHECK_TOOL(CXX, g++, c++, , , )
+  : ${CXX:=g++}
+  AC_PROG_CXX
   test -z "$CC" && AC_MSG_ERROR([no acceptable cc found in \$PATH])
 fi
 
-if test $ac_cv_prog_gcc = yes; then
-  GCC=yes
-dnl Check whether -g works, even if CFLAGS is set, in case the package
-dnl plays around with CFLAGS (such as to build both debugging and
-dnl normal versions of a library), tasteless as that idea is.
-  ac_test_CFLAGS="${CFLAGS+set}"
-  ac_save_CFLAGS="$CFLAGS"
-  CFLAGS=
-  if test "$ac_test_CFLAGS" = set; then
-    CFLAGS="$ac_save_CFLAGS"
-  elif test $ac_cv_prog_cc_g = yes; then
-    CFLAGS="-g -O2"
-  else
-    CFLAGS="-O2"
-  fi
-else
-  GCC=
-  test "${CFLAGS+set}" = set || CFLAGS="-g"
-fi
+CXXFLAGS='$(CFLAGS)'
 ])
 
 LIB_AC_PROG_CC
